[Fix] -> Comment textearea right and left padding aligned with the Leave a Comment string.

--- a/assets/css/unminified/style-rtl.css
+++ b/assets/css/unminified/style-rtl.css
@@ -5348,8 +5348,8 @@ input[type="color"]::-webkit-color-swatch {
 .comment-form-author,
 .comment-form-email,
 .comment-form-url {
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .ast-page-builder-template .comments-area {
