--- a/sass/site/blog/single-post-layouts/_comment-form.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form.scss
@@ -355,8 +355,8 @@
 .comment-form-author,
 .comment-form-email,
 .comment-form-url {
-    padding-right: 12px;
-    padding-left: 12px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .ast-page-builder-template{
